# stomp-claw

./: CLAUDE.md  Cargo.toml  README.md  build-release.sh  send-to-openclaw.py  start-viewer.sh  start.sh  stop.sh  tail-log.sh
.serena/: project.yml
docs/: analysis-overview.md  improvements-backend.md  improvements-devops.md  improvements-frontend.md  new-features.md
docs/plans/: 2026-03-02-live-viewer-design.md  2026-03-02-live-viewer-implementation.md  2026-03-07-stomp-claw-2.0-design.md  2026-03-07-stomp-claw-2.0-implementation.md  2026-03-08-image-paste-design.md  2026-03-08-image-paste-plan.md
docs/superpowers/plans/: 2026-03-11-document-upload-plan.md  2026-03-25-agent-switching.md
docs/superpowers/specs/: 2026-03-11-document-upload-design.md
src/: audio.rs  beep.rs  commands.rs  config.rs  db.rs  events.rs  llm.rs  main.rs  midi.rs  server.rs  transcription.rs  viewer.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/app/: main.tsx
ui/app/components/: AgentSelector.tsx  ChatView.tsx  ConnectionStatus.tsx  ContextBar.tsx  HelpModal.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  SessionSidebar.tsx  StatusBar.tsx  StreamingMessage.tsx  TextInput.tsx
ui/app/lib/: state.tsx  types.ts  ws.ts
ui/app/routes/: index.tsx
ui/app/styles/: app.css
ui/public/: manifest.json  sw.js
