[package]
name = "stomp_claw"
version = "0.1.0"
edition = "2024"

[dependencies]
midir = "0.9"
cpal = "0.15"
hound = "3.4"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
toml = "0.8"
rouille = "3.6"
notify = "6.1"
rand = "0.8"